src - 27 March/objects/Plan_Step__c.object
<CustomObject>
    <fields>
        <fullName>Associate_Case_Status__c</fullName>
        <label>Associate Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Plan</label>
        <referenceTo>Case_Plan__c</referenceTo>
        <relationshipLabel>Plan Steps</relationshipLabel>
        <relationshipName>Plan_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <formula>&quot;Plan_Step__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Field_API_Name__c</fullName>
        <defaultValue>&quot;Start_When__c&quot;</defaultValue>
        <label>Picklist Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_When__c</fullName>
        <label>Start_When__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clear Record</fullName>
                </value>
                <value>
                    <fullName>Wait For Approval</fullName>
                </value>
                <value>
                    <fullName>Send Approval Request</fullName>
                </value>
                <value>
                    <fullName>Create Contact</fullName>
                </value>
                <value>
                    <fullName>Create Account</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Create User</fullName>
                </value>
                <value>
                    <fullName>Create Account`</fullName>
                </value>
                <value>
                    <fullName>Send Email Test Button Width ABCDEF</fullName>
                </value>
                <value>
                    <fullName>asdfasdf</fullName>
                </value>
                <value>
                    <fullName>TestAdmin1</fullName>
                </value>
                <value>
                    <fullName>JD Step 1SD</fullName>
                </value>
                <value>
                    <fullName>NewTestStep</fullName>
                </value>
                <value>
                    <fullName>JDtest sttep</fullName>
                </value>
                <value>
                    <fullName>JDStep1</fullName>
                </value>
                <value>
                    <fullName>JDTest Step 1</fullName>
                </value>
                <value>
                    <fullName>Test Step 1 Case Plan 1</fullName>
                </value>
                <value>
                    <fullName>Test Plan</fullName>
                </value>
                <value>
                    <fullName>SD new Steps 1</fullName>
                </value>
                <value>
                    <fullName>SD New Steps</fullName>
                </value>
                <value>
                    <fullName>SD New Plan Step</fullName>
                </value>
                <value>
                    <fullName>JD Step 2</fullName>
                </value>
                <value>
                    <fullName>Step 3</fullName>
                </value>
                <value>
                    <fullName>Step 2</fullName>
                </value>
                <value>
                    <fullName>Step 1</fullName>
                </value>
                <value>
                    <fullName>Test Case Step new Flow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <formula>Object_API_Name__c + &apos;&apos; + &apos;Start When&apos; + &apos;&apos; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Name</label>
        <type>Text</type>
    </fields>
    <label>Plan Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Plan__c</columns>
        <columns>Associate_Case_Status__c</columns>
        <columns>Flow__c</columns>
        <columns>Start_When__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>